--- a/src/index.css
+++ b/src/index.css
@@ -53,8 +53,9 @@ html {
   scroll-behavior: smooth; /* smooth scroll to scroll to page IDs */
 }
 body {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Helvetica Neue', 'Segoe UI', system-ui, -apple-system,
+    BlinkMacSystemFont, Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
+    sans-serif;
   background: var(--clr-white);
   color: var(--clr-grey-1);
   line-height: 1.5;
@@ -205,10 +206,10 @@ Hero
   border-color: var(--clr-white);
 }
 @media screen and (min-width: 768px) {
-  /* .hero {
+  .hero {
     background: linear-gradient(rgb(44, 174, 186, 0.7), rgba(0, 0, 0, 0.7)),
-      url('../images/main.jpeg') center/cover no-repeat;
-  } */
+      url('./images/main.jpeg') center/cover no-repeat;
+  }
   .hero-banner {
     padding: 0;
   }
